@@ -1,3 +1,5 @@
+2006/6/10 -- released version 20060610_trunk
+
 2006/6/9 -- released version 20060609_trunk
 
 2006/6/8 -- released version 20060608_trunk
